@@ -149,7 +149,8 @@ protected:
 		PRINT_NODE_CONNECTION	= 0x10U,
 		PRINT_EL_CONNECTION	= 0x20U,
 		PRINT_CONNECTION	= (PRINT_NODE_CONNECTION|PRINT_EL_CONNECTION),
-		PRINT_TO_FILE = 0x40U
+
+		PRINT_TO_FILE 		= 0x1000U
 	};
 	unsigned uPrintFlags;
 	/* Parametri vari */
